--- a/index.html
+++ b/index.html
@@ -2103,13 +2103,13 @@
                     <div class="about-text">
                         <p v-for="(paragraph, index) in aboutContent" :key="index">{{ paragraph }}</p>
                     </div>
-                    <div class="about-image">
-                        <!-- ABOUT IMAGE: Tambahkan gambar tentang yayasan di sini -->
+                   <!--  <div class="about-image">
+                         ABOUT IMAGE: Tambahkan gambar tentang yayasan di sini 
                         <img v-if="aboutImage" :src="aboutImage" alt="Tentang Yayasan Taman Lentera Surga" />
                         <div v-else class="about-placeholder">
                             <i class="fas fa-mosque"></i>
                         </div>
-                    </div>
+                    </div>-->
                 </div>
             </div>
         </section>
