--- a/index.html
+++ b/index.html
@@ -2533,19 +2533,19 @@
                             name: 'KH. Kusno, S.Ag., M.Pd.I',
                             position: 'Dewan Pengawas',
                             description: 'Tokoh Muhammadiyah Jember',
-                            photo: 'ifoto.jpg'
+                            photo: 'ustkusno.png'
                         },
                         {
-                            name: 'KH. Hamid Hasbullah',
+                            name: 'Prof Dr. Ir. H Ujang Suryadi, MP., IPM. ',
                             position: 'Penasehat',
-                            description: 'Pengasuh Pesantren, Ketua LPAI Jember',
-                            photo: 'foto.jpg'
+                            description: 'Guru Besar Universitas Jember, berpengalaman 30 tahun di bidang pendidikan',
+                            photo: 'profujang.png'
                         },
                         {
                             name: 'Ust Agus Rohmawan, SE',
                             position: 'Ketua Yayasan',
                             description: 'Berpengalaman 20 tahun mengelola berbagai pesantren tahfizh dan pendampingan Disabilitas',
-                            photo: 'foto.jpg'
+                            photo: 'ustagus.png'
                         }
                     ],
                     
